condor_logs/errors.1071229.0.err
2026-04-25 00:25:00.276518: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA
To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.
2026-04-25 00:25:01.901565: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /lhome/ext/uv140/uv1402/miniconda3/envs/cuda-env/lib:
2026-04-25 00:25:01.902066: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /lhome/ext/uv140/uv1402/miniconda3/envs/cuda-env/lib:
2026-04-25 00:25:01.902091: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.
Traceback (most recent call last):
  File "/lhome/ext/uv140/uv1402/Maria/Conditional-WGAN-GP/Entrenamiento0.py", line 25, in <module>
    from preprocess_data import Dataset
  File "/lhome/ext/uv140/uv1402/Maria/Conditional-WGAN-GP/preprocess_data.py", line 13
    def__init__(self, batch_size):
                                 ^
SyntaxError: invalid syntax
